# delphyne_gui

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  Jenkinsfile  LICENSE  README.md  WORKSPACE  colcon.pkg  delphyne-gui.repos  delphyne.repos  package.xml  prereqs  setup.bash  setup.bash.in  setup.sh.in
bridge/: BUILD  CMakeLists.txt  README.md  abstract_repeater.hh  demo_launcher.py  ign_channel_repeater.hh  ign_service_converter.hh  ign_to_lcm_translation.cc  ign_to_lcm_translation.hh  ign_topic_repeater.hh  launcher.py  lcm-to-ign-trans-bridge.cc  lcm_channel_repeater.h  lcm_channel_repeater.hh  lcm_ign_transport_bridge.cc  lcm_mock_moving_sphere.cc  lcm_mock_robot_publisher.cc  lcm_robot_publisher.cc  lcm_to_ign_translation.cc  lcm_to_ign_translation.hh  lcm_to_ign_translator.cc  lcm_to_ign_translator.h  lcm_to_ign_transport_bridge.cc  mocked_robot_demo.py  repeater_factory.cc  repeater_factory.hh  repeater_manager.cc  repeater_manager.hh  service_to_channel_translation.cc  service_to_channel_translation.hh  translate_exception.hh  transport_bridge.cc
bridge/drake/: README.md  lcmt_driving_command_t.hpp  lcmt_simple_car_state_t.hpp  lcmt_viewer_command.hpp  lcmt_viewer_draw.hpp  lcmt_viewer_geometry_data.hpp  lcmt_viewer_link_data.hpp  package.xml  viewer2_comms_t.hpp
bridge/lcmtypes/: README.md  lcmt_viewer_geometry_data.hpp  lcmt_viewer_link_data.hpp  lcmt_viewer_load_robot.hpp
bridge/test/: CMakeLists.txt  dummy_test.cc  ign_service_converter_test.cc  ign_to_lcm_translation_test.cc  lcm_channel_repeater_test.cc  lcm_to_ign_translation_test.cc  repeater_factory_test.cc  repeater_manager_test.cc  service_to_channel_translation_test.cc
delphyne-demos/: CMakeLists.txt  package.xml
delphyne-demos/demos/: CMakeLists.txt  city.py  crash.py  dragway.py  gazoo.py  keyop.py  mali.py  mali2.py  mobil_perf.py  realtime.py  roads.py  scriptlets.py
delphyne-demos/examples/: CMakeLists.txt  README.md  delphyne-city  delphyne-crash  delphyne-dragway  delphyne-gazoo  delphyne-keyop  delphyne-mali  delphyne-mobil-perf  delphyne-realtime  delphyne-roads  delphyne-scriptlets
delphyne-demos/test/: CMakeLists.txt
delphyne-gui/: CMakeLists.txt  package.xml  prereqs
delphyne-gui/cmake/: DefaultCFlags.cmake  SanitizersConfig.cmake  SearchForStuff.cmake  TestUtils.cmake  Utils.cmake  config.hh.in
delphyne-gui/python/: CMakeLists.txt  utilities.py
delphyne-gui/test/: CMakeLists.txt
delphyne-gui/tools/: reformat_code.sh  run_clang_format.sh  run_clang_tidy.sh
delphyne-gui/visualizer/: CMakeLists.txt  arrow_mesh.cc  arrow_mesh.hh  global_attributes.hh  layer_selection_widget.cc  layer_selection_widget.hh  maliput_mesh.hh  maliput_mesh_builder.cc  maliput_mesh_builder.hh  maliput_mesh_converter.cc  maliput_mesh_converter.hh  maliput_viewer_model.cc  maliput_viewer_model.hh  maliput_viewer_widget.cc  maliput_viewer_widget.hh  orbit_view_control.cc  orbit_view_control.hh  outliner.cc  outliner.hh  playback_widget.cc  playback_widget.hh  render_maliput_widget.cc  render_maliput_widget.hh  render_widget.cc  render_widget.hh  rules_visualizer_widget.cc  rules_visualizer_widget.hh  selecter.cc  selecter.hh  selector.cc  selector.hh  teleop_widget.cc  teleop_widget.hh  traffic_light_manager.cc  traffic_light_manager.hh  visualizer.cc
delphyne_demos/: .flake8  CMakeLists.txt  package.xml
delphyne_demos/demos/: CMakeLists.txt  city.py  crash.py  dragway.py  gazoo.py  helpers.py  keyop.py  mali.py  mali2.py  mobil_perf.py  realtime.py  roads.py  scriptlets.py  trip_integration.py
delphyne_demos/examples/: CMakeLists.txt  delphyne_mali2  delphyne_realtime  delphyne_trip_integration
delphyne_demos/test/: CMakeLists.txt
delphyne_gui/: .flake8  CHANGELOG.rst  CMakeLists.txt  package.xml  prereqs  setup.sh.in
delphyne_gui/cmake/: SearchForStuff.cmake  TestUtils.cmake  Utils.cmake  config.hh.in
delphyne_gui/doc/: Doxyfile.overlay.in
delphyne_gui/python/: launcher.py  utilities.py
delphyne_gui/tools/: maliput_viewer0.sh  maliput_viewer2.sh  reformat_code.sh
delphyne_gui/visualizer/: CMakeLists.txt  FileSelectionArea.qml  InfoArea.qml  LabelsSelectionArea.qml  LanesListArea.qml  LayersSelectionArea.qml  MaliputViewerPlugin.qml  PhaseSelectionArea.qml  PlaybackPlugin.qml  PlaybackPlugin.qrc  README.md  RulesListArea.qml  SelectedLanesArea.qml  TopicsStats.qml  global_attributes.cc  global_attributes.hh  layout2_for_playback.config  layout2_maliput_viewer.config  layout2_with_teleop.config  layout_for_playback.config  layout_maliput_viewer.config  layout_with_render_only.config  layout_with_teleop.config  maliput_mesh_converter.cc  maliput_viewer_model.cc  maliput_viewer_model.hh  maliput_viewer_plugin.cc  maliput_viewer_plugin.hh  maliput_viewer_plugin.qrc  maliput_viewer_widget.cc  maliput_viewer_widget.hh  playback_plugin.cc  playback_plugin.hh  playback_widget.cc  render_maliput_widget.cc  render_maliput_widget.hh  render_widget.cc  render_widget.hh  selector.hh  teleop_plugin.h  (+9 more)
visualizer/: BUILD  CMakeLists.txt  GlobalAttributes.cc  GlobalAttributes.hh  GuiRenderWidget.cc  GuiRenderWidget.hh  LayerSelectionWidget.cc  LayerSelectionWidget.hh  MaliputMesh.hh  MaliputMeshBuilder.cc  MaliputMeshBuilder.hh  MaliputViewerModel.cc  MaliputViewerModel.hh  MaliputViewerWidget.cc  MaliputViewerWidget.hh  OrbitViewControl.cc  OrbitViewControl.hh  README.md  RenderMaliputWidget.cc  RenderMaliputWidget.hh  RenderWidget.cc  RenderWidget.hh  System.hh  TeleopWidget.cc  TeleopWidget.hh  TimeWidget.cc  TimeWidget.hh  global_attributes.cc  global_attributes.hh  initialLayout.config  layer_selection_widget.cc  layer_selection_widget.hh  layout.config  layoutMaliputViewer.config  layoutWithRenderOnly.config  layoutWithTeleop.config  layout_for_playback.config  layout_maliput_viewer.config  layout_with_render_only.config  layout_with_teleop.config  (+16 more)
visualizer/display_plugins/: AgentInfoDisplay.qml  OriginDisplay.qml  agent_info_display.cc  agent_info_display.hh  agent_info_display.qrc  origin_display.cc  origin_display.hh  origin_display.qrc
visualizer/displays/: CMakeLists.txt  (+2 more)
(+190 files in other folders)
