<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphyne_demos</name>
  <version>1.0.0</version>
  <description>Delphyne Demos</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="../LICENSE">BSD 3-Clause</license>

  <exec_depend>delphyne</exec_depend>
  <exec_depend>delphyne_gui</exec_depend>
  <exec_depend>ament_cmake</exec_depend>

  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
