<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphyne_gui</name>
  <version>1.0.0</version>
  <description>Delphyne GUI</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="../LICENSE">BSD 3-Clause</license>

  <build_depend>libqt5-multimedia</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>libqwt-qt5-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <build_depend>ignition-common3</build_depend>
  <build_depend>ignition-msgs5</build_depend>
  <build_depend>ignition-transport8</build_depend>
  <build_depend>ignition-rendering3</build_depend>
  <build_depend>ignition-gui0</build_depend>
  <build_depend>ignition-gui3</build_depend>
  <build_depend>delphyne</build_depend>

  <depend>drake_vendor</depend>
  <depend>maliput</depend>
  <depend>maliput_multilane</depend>

  <build_export_depend>ignition-common3</build_export_depend>
  <build_export_depend>ignition-msgs5</build_export_depend>
  <build_export_depend>ignition-transport8</build_export_depend>
  <build_export_depend>ignition-rendering3</build_export_depend>
  <build_export_depend>ignition-gui0</build_export_depend>
  <build_export_depend>ignition-gui3</build_export_depend>
  <build_export_depend>delphyne</build_export_depend>

  <exec_depend>ament_cmake</exec_depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
